--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.9",
-    "@angular/cdk": "^17.3.10",
+    "@angular/cdk": "^18.2.10",
     "@angular/common": "^18.2.9",
     "@angular/compiler": "^18.2.9",
     "@angular/core": "^18.2.9",
     "@angular/forms": "^18.2.9",
-    "@angular/material": "^17.3.10",
+    "@angular/material": "^18.2.10",
     "@angular/platform-browser": "^18.2.9",
     "@angular/platform-browser-dynamic": "^18.2.9",
     "@angular/router": "^18.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
+    "material-design-icons": "^3.0.1",
+    "npm": "^10.9.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
