--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
     "material-design-icons": "^3.0.1",
+    "ngx-spinner": "^17.0.0",
     "npm": "^10.9.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
