--- a/angular.json
+++ b/angular.json
@@ -13,9 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": {
-              "base": "dist/visualizador-produccion-fe"
-            },
+            "outputPath": "dist/visualizador-produccion-fe",
             "index": "src/index.html",
             "polyfills": [
               "zone.js",
