--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "material-design-icons": "^3.0.1",
     "ngx-spinner": "^17.0.0",
     "npm": "^10.9.0",
@@ -37,6 +39,7 @@
     "@angular/cli": "~18.2.10",
     "@angular/compiler-cli": "^18.2.9",
     "@angular/localize": "^18.2.9",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
