--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^18.2.9",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.6",
+    "@types/crypto-js": "^4.2.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
+    "crypto-js": "^4.2.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "material-design-icons": "^3.0.1",
